Otimiza queries da madrugada, corrige bugs de execucao e adiciona envio FTP
Engine:
- Envio ao FTP (commons-net): zip + upload para
  FTP_BASE_DIR/<OUTPUT_FOLDER>/<dd_MM_aaaa>/<COMANDO>, criando a arvore remota
- Novas colunas de comando: ZIP_CSV e SEND_FTP (booleanas)
- ALIAS=AUTO reproduz o nome do gerador antigo; carimbo em 24h (era 12h)
- VARS: AUTO e ANT resolvem para a referencia anterior (antes AUTO ia literal)
- Compilada para Java 8: as maquinas do job nao tem runtime mais novo
- WORK_MEM opcional por sessao (sort de milhoes de linhas ia para disco)
- COPY fecha o parentese em linha nova: SQL terminado em comentario quebrava
- Log de tamanho nao derruba mais o comando; CSV ausente vira erro explicito
- CSV e apagado apos zipar; CSV parcial e removido quando a query falha

SQL:
- Marcadores normalizados para ${VAR_X} em toda a pasta
- BOM UTF-8 removido de 38 arquivos (o banco e LATIN1 e recusava)
- CAD_COM_DEBITO_INCREMENTADO: 63 -> 13 min (coluna de auditoria que varria
  seguranca.* por matricula; comparacoes que viravam texto e anulavam indices)
- RAS_SOMENTE_PENDENTES: 5,6 -> 0,4 min (somava pagamento pos-encerramento em
  R.A. pendente, que nunca tem encerramento)
- RAS_SOMENTE_ENCERRADAS: subqueries por linha (2,4 mi de R.A.) viraram agregacao
- cadastro_com_debito_protesto: 6,0 -> 4,1 min (varredura unica em CTE)
- Todas validadas por hash do conjunto contra a versao original

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>